--- a/css.html
+++ b/css.html
@@ -22,7 +22,7 @@
 <input type="name" name="name" id="name" placeholder="Name"><br>
 <input type="name" name="name" id="name" placeholder="Last Name">
 <input type="Last name" name="Last name"id="Last name" placeholder="Class">
-<input type="Last name" name="Last name"id="Last name" placeholder="Roll number">
+<input type="Last name" name="Last name"id="Last name" placeholder="Id card number">
 <input type="Gender" name="Gender"id="Gender" placeholder="Gender">
 
 
